# agenthive

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: demo_simulation.json  sample_scenario.yaml
src/agenthive/: __init__.py  __main__.py  cli.py  models.py  simulator.py
src/agenthive/agents/: __init__.py  attacker.py  coordinator.py  observer.py  victim.py
src/agenthive/attacks/: __init__.py  authority_escalation.py  memory_manipulation.py  prompt_injection.py  swarm_propagation.py  tool_poisoning.py
src/agenthive/lab/: __init__.py  server.py  tools.py
src/agenthive/reporters/: __init__.py  console.py  html.py  json.py  sarif.py
src/agenthive/scenarios/: __init__.py  authority_hijack.py  collaboration_attack.py  cross_agent_injection.py  identity_spoofing.py  long_horizon.py  multi_agent_ssrf.py  swarm_poisoning.py  tool_drift.py
src/agenthive/utils/: __init__.py  http.py  mcp.py  taxonomy.py
tests/: test_cli.py  test_edge_cases.py  test_edge_scenarios.py  test_integration.py  test_lab.py  test_lab_tools.py  test_reporters.py  test_simulator.py  test_utils.py
tests/test_agents/: test_agents.py
tests/test_attacks/: test_attacks.py
tests/test_scenarios/: test_scenarios.py
