[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthive-sim"
version = "0.1.0"
description = "Multi-agent attack simulation framework for AI systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Carlos Rocha", email = "carlosrocha@users.noreply.github.com" },
]
keywords = [
    "ai-security",
    "multi-agent",
    "attack-simulation",
    "mcp",
    "llm-security",
    "red-team",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
lab = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
agenthive = "agenthive.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthive"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest-asyncio]
asyncio_mode = "auto"
